feat($project-setting): restructure package